# 5DoF_FI

./: README.md
FI_msgs/: FootInputMsg.h  FootOutputMsg.h
Firmware/: Readme
Firmware/main/: TODO  main.ino
Firmware/main/libraries/LP_Filter/: LP_Filter.h
Firmware/main/libraries/ros_lib/foot_control_xy/: TeleportAbsolute.h
Firmware/main/libraries/ros_lib/foot_interfaces/: FootMouseMsg.h
Firmware/main/libraries/ros_lib/testTeo/: Num.h
Untitled_Message 2/: FootInputMsg.msg  FootOutputMsg.msg
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: FeetOutputMsg.msg  FootOutputMsg.msg
custom_msgs/src/: feet_output_publisher.cpp
libraries/LP_Filter/: LP_Filter.cpp  library.properties
libraries/QEC_1x/: QEC_1X_SPI.cpp  QEC_1X_SPI.h  library.properties
libraries/ros_lib/: ArduinoHardware.h
libraries/ros_lib/active_debris_control/: StampedDepths.h
libraries/ros_lib/custom_msgs/: FootInputMsg.h  FootOutputMsg.h
libraries/ros_lib/foot_control_xy/: Kill.h  Spawn.h
libraries/ros_lib/lwr_controllers/: FF_FB_plan.h  MultiPriorityTask.h  RPY.h
libraries/ros_lib/lwr_fri/: FRI.h  JointStates.h  StringService.h
libraries/ros_lib/lwr_ros_client/: String_cmd.h
libraries/ros_lib/mouse_perturbation_robot/: MouseMsg.h
libraries/ros_lib/netft_rdt_driver/: String_cmd.h
libraries/ros_lib/record_ros/: String_cmd.h
libraries/ros_lib/rosserial_mbed/: Adc.h
libraries/ros_lib/testTeo/: MouseMsg.h
